cambio nombre dibujo portada

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,7 +263,7 @@ a.boton {
   bottom: 40px; 
   width: 500px;
   height: auto;
-  background: url('/assets/images/21.png') no-repeat center center;
+  background: url('/assets/images/dibujoportada.png') no-repeat center center;
   background-size: cover; 
   opacity: 0.5;
   border-radius: 20px;
