--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -7,5 +7,12 @@
     --gris: #818181;
     --grisclaro: #c6c6c6;
     --blanco: #f1f1f1;
+
+    --text: #060607;
+    --background: #f9fafb;
+    --primary: #5a79b9;
+    --secondary: #97afe1;
+    --accent: #638de4;
+    
   }
   
