--- a/includes/menu.html
+++ b/includes/menu.html
@@ -2,9 +2,9 @@
     <!-- Contenido del menú -->
     <a href="../">Inicio</a>
     <a href="../proyecto">Sobre el proyecto</a>
+    <a href="../obra">Fray Andrés y su obra</a>
     <a href="../edicion">Edición</a>
-    <a href="../edicion/textocompleto.html">Texto completo</a>
-    <a href="../estudio">Estudio</a>
+    <a href="../bibliografia">Bibliografía</a>
     <div class="cita">
         <p>Mamani Fuentes, Francisco (2024). "La carpintería de armar en Fray Andrés de San Miguel", edición digital. 10.5281/zenodo.13365293</p>
     </div>
