--- a/includes/menu.html
+++ b/includes/menu.html
@@ -1,10 +1,23 @@
+<div id="menu-placeholder"></div>
 <div id="mySidebar" class="sidebar">
     <!-- Contenido del menú -->
     <a href="../">Inicio</a>
     <a href="../proyecto">Sobre el proyecto</a>
     <a href="../obra">Fray Andrés y su obra</a>
-    <a href="../edicion">Edición</a>
+    
+    <!-- Enlace con submenú -->
+    <div class="menu-item">
+        <a href="../edicion">Edición</a>
+        <a href="#" id="submenu-toggle"><i class="fas fa-angle-down"></i></a>
+    </div>
+    <div id="submenu" class="submenu">
+        <a href="../edicion/72r.html">Confección de cartabones y armaduras</a>
+        <a href="../edicion/87v.html">Confección de mocárabes</a>
+        <a href="../edicion/88r.html#subsección_3">Confección de medias naranjas</a>
+    </div>
+    
     <a href="../bibliografia">Bibliografía</a>
+
     <div class="cita">
         <p>Mamani Fuentes, Francisco (2024). "La carpintería de armar en Fray Andrés de San Miguel", edición digital. 10.5281/zenodo.13365293</p>
     </div>
