arreglado el menú de contenidos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,7 +281,7 @@ a.boton {
 
 /* MENÚ CONTENIDOS */
 #menu-contenidos {
-  position: fixed;
+  position: relative;
   top: 20px;
   overflow-y: auto;
   max-height: 80vh;
