--- a/assets/css/tei.css
+++ b/assets/css/tei.css
@@ -414,3 +414,13 @@ tei-figure[id="fig_88v_3"] img {
 
 
 /* #endregion FIGURAS */
+
+
+
+
+@media (max-width: 768px) {
+  tei-head {
+    text-align: left;
+  }
+
+}
